--- a/ProyectoBanco_JK/banco_interfaz/src/main/java/interfazUsuario/Inicio.form
+++ b/ProyectoBanco_JK/banco_interfaz/src/main/java/interfazUsuario/Inicio.form
@@ -308,6 +308,9 @@
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="52" green="74" red="f6" type="rgb"/>
                 </Property>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Segoe UI" size="10" style="0"/>
+                </Property>
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
